k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.openshift.io/runtime: js
  name: express-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: express-app-instance
      app.kubernetes.io/name: express-app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: express-app-instance
        app.kubernetes.io/name: express-app
    spec:
      containers:
        - name: express-app
          image: quay.io/dale-lane/express-dale-lane
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
