k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: express-app-instance
    app.kubernetes.io/name: express-app
  sessionAffinity: None
  type: ClusterIP
